<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2017 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="notification_key"
        android:title="@string/lights_effects_notification_category">

        <Preference android:key="notification_settings"
               android:title="@string/lights_effects_notification_settings_title"
               android:summary="@string/lights_effects_notification_settings_summary"
               android:persistent="false">

           <intent android:action="android.intent.action.MAIN"
                   android:targetPackage="com.android.settings"
                   android:targetClass="com.android.settings.Settings$ConfigureNotificationSettingsActivity"/>

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="lights_effects_key"
        android:title="@string/lights_effects_music_category">

        <SwitchPreference
            android:key="lights_effects_music_enable"
            android:defaultValue="true"
            android:title="@string/lights_effects_music_enable_title"
            android:summary="@string/lights_effects_music_enable_summary" />

        <ListPreference
            android:key="lights_effects_music_gain"
            android:title="@string/lights_effects_music_gain_title"
            android:summary="@string/lights_effects_music_gain_summary"
            android:entries="@array/lights_effects_music_gain_entries"
            android:entryValues="@array/lights_effects_music_gain_values" />

        <SwitchPreference
            android:key="lights_effects_music_awake"
            android:defaultValue="true"
            android:title="@string/lights_effects_music_awake_title"
            android:summary="@string/lights_effects_music_awake_summary" />

        <SwitchPreference
            android:key="lights_effects_music_always"
            android:defaultValue="false"
            android:title="@string/lights_effects_music_always_title"
            android:summary="@string/lights_effects_music_always_summary" />

    </PreferenceCategory>

</PreferenceScreen>
